--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "mocha",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
