--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -1,4 +1,4 @@
-name: Node CI # The name of the workflow
+name: Node CI - Testing # The name of the workflow
 
 on: # Define when the workflow will run
   push: # Trigger the workflow on push events
