--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/react": "^2.2.1",
     "@tiptap/starter-kit": "^2.2.1",
     "axios": "^1.6.7",
+    "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.4.0",
