--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,8 +3,10 @@ name: CD - Firebase Deployment
 on:
   push:
     branches:
-      - "**"
+      - "main"
   pull_request:
+    branches:
+      - "main"
 
 jobs:
   deploy:
