--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -8,6 +8,12 @@ on:
     branches:
       - "main"
 
+# Add permissions for the workflow
+permissions:
+  contents: read
+  checks: write
+  deployments: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
