--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.17",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
