--- a/package.json
+++ b/package.json
@@ -24,11 +24,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tiptap/extension-link": "^2.2.1",
-    "@tiptap/extension-placeholder": "^2.12.0",
-    "@tiptap/pm": "^2.2.1",
-    "@tiptap/react": "^2.2.1",
-    "@tiptap/starter-kit": "^2.2.1",
     "axios": "^1.6.7",
     "chrono-node": "^2.8.3",
     "class-variance-authority": "^0.7.0",
@@ -42,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
